--- a/Login.html
+++ b/Login.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 
-<html lang="en" class="no-js">
+<html lang="en">
+<title>Welcome</title>
 
 <head>
     <meta charset="utf-8">
 <!-- Links for straps and fonts-->
-    <link rel="stylesheet" href="css/Style.css">   
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+  
     <header>
         
     </header>
@@ -24,7 +27,7 @@
                 <input type="password" name="" required="">
                 <label>Password</label>
               </div>
-              <a href="#">
+              <a href="index.html">
                 <span></span>
                 <span></span>
                 <span></span>
